# clarify

./: README.md  clarify_lsp.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
code/: test_extract_variable.py  test_inline_function.py  teste1.py  teste2.py  teste3.py  teste4.py  teste5.py  teste6.py
server/: main.py
src/clarify_lsp/: server.py
